# http-segmentation

./: .gitattributes  Dockerfile  Makefile  README.md  main.py  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt
